[project]
name = "gns3-mcp"
version = "0.1.0"
description = "MCP server per controllo GNS3 via Prismalux"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31,<3.0",
    "gns3fy>=0.8.0,<1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
